fix annoying img resize on mobile scroll

--- a/sass/components/_releaseBox.scss
+++ b/sass/components/_releaseBox.scss
@@ -82,5 +82,9 @@
 
     @include responsive($phone){
         margin: 0;
+
+        &__img {
+            width: 90vw;
+        }
     }
 }
